# PixEngine_Android_demo

./: .gitmodules  README.md  build.gradle  cpp  settings.gradle
PixFu_Android_lib/: build.gradle
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: PixEngine  README
app/src/main/assets/opengl/v300es/: default.fragment.glsl  world.fragment.glsl
app/src/main/cpp/: CMakeLists.txt  run.cpp
app/src/main/cpp/app/demo/: Demo.h  Demo3d.h  DemoControls.h  DemoEngine.cpp  DemoEngine.h  DemoGyro.h  DemoGyro2.h
app/src/main/cpp/app/lonekart/: Arena.cpp  ArenaLevel.cpp  Main.cpp
app/src/main/cpp/app/lonekart/inc/: Arena.hpp  ArenaLevel.hpp  Main.hpp
app/src/main/cpp/app/videos/: OneLoneCoder_PGE_Balls2.h  OneLoneCoder_PGE_PathFinding_WaveProp.cpp  OneLoneCoder_PGE_PolygonCollisions1.cpp
app/src/main/headers/: olcPixelGameEngine.h
app/src/main/headers/arch/android/plugins/: lonescreenkey.h
demoapp/app/src/main/cpp/: CMakeLists.txt  run.cpp
demoapp/app/src/main/cpp/app/demo/: DemoEngine.cpp  DemoEngine.h
olcpge_android/: build.gradle  olcpge_android.aar
pixengine_android/: build.gradle
